--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -6,13 +6,13 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{% static 'dashboard/blog.css' %}" rel="stylesheet">
+    <link href="{% static 'dashboard/dashboard.css' %}" rel="stylesheet">
     <title>OneApply</title>
 </head>
 <body>
 <div style="display: flex; flex-direction: column; width: 100%; height: 100%;">
     <div class="nav-container">
-        <nav class="navbar navbar-expand-md navbar-dark bg-primary mb-4">
+        <nav class="navbar navbar-expand-md navbar-dark bg-primary">
             <a class="navbar-brand" href="#">OneApply</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarCollapse" aria-controls="navbarCollapse"
@@ -31,31 +31,29 @@
             </div>
         </nav>
     </div>
-    <div class="nav-scroller py-1 mb-2">
+    <div class="nav-scroller mb-2">
         {% if user_type == constant_ut_student %}
             <nav class="nav d-flex justify-content-between">
                 <div class="nav nav-tabs d-flex justify-content-between" id="dashboard-tab"
-                     role="tablist">
+                     role="tablist" style="width: 100%;">
+                    {# TODO: update this    #}
+                    {# this has to be a user object and not a user_type string  #}
+                    <span class="nav-item nav-link p-2 active" id="nav-allSchools-tab"
+                          data-toggle="tab"
+                          data-url="{% url 'dashboard:high_school:index' 'ut_student' %}"
+                          role="tab" aria-controls="nav-allSchools">All Schools</span>
                     <span class="nav-item nav-link p-2" id="nav-selectedSchools-tab"
                           data-toggle="tab"
                           data-url="#nav-selectedSchools" role="tab"
                           aria-controls="nav-selectedSchools">Selected Schools</span>
-                    {# TODO: update this    #}
-                    {# this has to be a user object and not a user_type string  #}
-                    <span class="nav-item nav-link p-2" id="nav-allSchools-tab"
-                          data-toggle="tab"
-                          data-url="{% url 'dashboard:high_school:index' 'ut_student' %}"
-                          role="tab" aria-controls="nav-allSchools">All Schools</span>
                     <span class="nav-item nav-link p-2" id="nav-applications-tab"
                           data-toggle="tab" data-url="#nav-applications"
                           role="tab" aria-controls="nav-applications">Application Forms</span>
-{#                    Todo; use this as reference for applications integration#}
-{#                    data-url -> 'dashboard:<applications_app_name>:<index_view>' 'ut_student'#}
-{#                    prefer not to change any other fields#}
-{#                    <span class="nav-item nav-link p-2" id="nav-recommendations-tab"#}
-{#                          data-toggle="tab"#}
-{#                          data-url="{% url 'dashboard:logIn:login_user' 'ut_student' %}" role="tab"#}
-{#                          aria-controls="nav-recommendations">Teacher Recommendations</span>#}
+                    <span class="nav-item nav-link p-2" id="nav-recommendations-tab"
+                          data-toggle="tab"
+                          data-url="#nav-recommendations" role="tab"
+                          aria-controls="nav-recommendations">Teacher Recommendations</span>
+                    <span></span>
                 </div>
             </nav>
         {% elif user_type == constant_ut_adminStaff %}
@@ -70,15 +68,15 @@
     </div>
     {% if user_type == constant_ut_student %}
         <div class="tab-content" id="dashboardTabContent">
-            <div class="tab-pane fade" id="nav-selectedSchools" role="tabpanel"
-                 aria-labelledby="nav-selectedSchools-tab">
-                <h1>Hello, this is selected schools page</h1>
-            </div>
             <div class="tab-pane fade active" id="nav-allSchools" role="tabpanel"
                  aria-labelledby="nav-allSchools-tab">
                 {% block all_high_schools %}
                     All schools
                 {% endblock %}
+            </div>
+            <div class="tab-pane fade" id="nav-selectedSchools" role="tabpanel"
+                 aria-labelledby="nav-selectedSchools-tab">
+                <h1>Hello, this is selected schools page</h1>
             </div>
             <div class="tab-pane fade" id="nav-applications" role="tabpanel"
                  aria-labelledby="nav-applications-tab">
@@ -113,7 +111,7 @@
 <script>
     let toggleTabs = function (selected_tab) {
         $('.nav-item').removeClass("active");
-        $(this).addClass("active");
+        $(selected_tab).addClass("active");
         let tab_target = selected_tab.attr("aria-controls");
         $('.tab-pane').removeClass("active");
         $('.tab-pane').removeClass("show");
