--- a/static/high_schools/css/high_school.css
+++ b/static/high_schools/css/high_school.css
@@ -23,7 +23,7 @@ body {
 }
 
 .pagination-div{
-    margin: 0% 7.5%;
+    margin: 0 7.5%;
 }
 
 .right-pane {
@@ -42,7 +42,7 @@ body {
 
 .right-pane-container {
     position: absolute;
-    top: 7.5%;
+    top: 4%;
     margin: 5% 7.5%;
     width: 80%;
 }
@@ -63,10 +63,56 @@ body {
     width: 100%;
 }
 
+.high-school-search{
+    margin: 2% 2.5% 0 7.5%;
+    width: 75%;
+}
+
+.high-school-search .search-div{
+    display: flex !important;
+    flex-direction: column !important;
+    position: relative !important;
+}
+
+.high-school-search .search-div .search-input{
+    width: 100%;
+    height: 36px;
+    padding: 15px 20px;
+    color: slategray;
+    border: 2px solid #e4e4e4 !important;
+    border-radius: 12px;
+}
+
+.high-school-search .search-div .search-input:focus{
+    outline: none !important;
+    border: 2px solid slategray !important;
+}
+
+.high-school-search .search-div .search-btn{
+    color: slategray;
+    position: absolute;
+    left: 95%;
+    top: 15%;
+    cursor: pointer;
+}
+
+.high-school-filters{
+    margin: 2% 5% 0 2.5%;
+    padding: 2px 10px;
+}
+.high-school-filters .filter-btn{
+    color: slategray;
+    font-size: 20px;
+    cursor: pointer;
+}
+.high-school-filter-div{
+    display: none;
+    margin: 2% 7.5% 0 7.5%;
+}
 /*overriding bootstrap*/
 .list-group-item {
     width: 85% !important;
-    margin: 5% 7.5% 0% 7.5% !important;
+    margin: 5% 7.5% 0 7.5% !important;
     border-radius: 10px;
 }
 
