--- a/admissions/templates/admissions/index.html
+++ b/admissions/templates/admissions/index.html
@@ -13,11 +13,14 @@
         <p>{{ exception }}</p>
     {% else %}
         {% if applications %}
-            <div class="dropdown">
+            <div class="dropdown" style="text-align: right; line-height: 2.5"><b>Filter
+                by
+                Program:</b>
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button"
                    id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                   aria-expanded="false" style="float: right; margin-right: 2em">
-                    Programs
+                   aria-expanded="false"
+                   style="float: right; margin-right: 2em; margin-left: 1em">
+                    {{ current_program }}
                 </a>
 
                 {% if programs %}
@@ -25,13 +28,14 @@
                         {% for program in programs %}
                             <a class="dropdown-item"
                                href="{% url "dashboard:admissions:index" %}?p={{ program }}">{{ program }}</a>
-                            </div>
                         {% endfor %}
+                    </div>
                 {% endif %}
             </div>
             {% for app in applications %}
-                <div class="card" style="margin: 3em 17em;">
-                    <div class="card-header"><b>
+                <div class="card"
+                     style="margin-top: 3em; margin-left: 17em; margin-right: 17em; background-color: #F9F7F3">
+                    <div class="card-header" style="background-color: #CDE6EC"><b>
                         {{ app.first_name }} {{ app.last_name }}
                         <span style="float: right">{{ app.application_number }}
                     </span>
@@ -39,14 +43,14 @@
                     </div>
                     <div class="card-body">
                         <div class="card-text" style="align-items: center;">
-                            <p>
+                            <span>
                                 Program: {{ app.program }}
-                                <span style="float: right">
-                            <a href="{% url 'dashboard:admissions:detail' app.id %}"
-                               class="btn btn-primary"
-                            >View Application</a>
-                        </span>
-                            </p>
+                            </span>
+                            <span style="float: right">
+                                <a href="{% url 'dashboard:admissions:detail' app.id %}"
+                                   class="btn btn-primary"
+                                >View Application</a>
+                            </span>
                             <footer class="blockquote-footer"
                                     style="margin-top:1em;">Date of Submission:
                                 {{ app.submitted_date }}
@@ -55,6 +59,7 @@
                     </div>
                 </div>
             {% endfor %}
+
         {% else %}
             <p>No applications are available.</p>
         {% endif %}
