filter and search together bug fix

--- a/static/high_schools/css/high_school.css
+++ b/static/high_schools/css/high_school.css
@@ -107,7 +107,7 @@ body {
 }
 .high-school-filter-div{
     display: none;
-    margin: 2% 7.5% 0 7.5%;
+    margin: 2% 0 0 0;
 }
 /*overriding bootstrap*/
 .list-group-item {
