updated empty list for search and filter queries

--- a/high_school/templates/high_school/school_list.html
+++ b/high_school/templates/high_school/school_list.html
@@ -14,7 +14,7 @@
                         </span>
                         </div>
                         <div class="high-school-filter-div">
-                            <h5>Filter using boroughs</h5>
+                            <p class="mb-1">Filter using boroughs</p>
                             <div class="form-group">
                                 <div class="custom-control custom-checkbox">
                                     <input type="checkbox" class="custom-control-input"
