--- a/high_school/templates/high_school/index.html
+++ b/high_school/templates/high_school/index.html
@@ -28,8 +28,12 @@
                             {% include 'high_school/school_overview.html' %}
                         {% endblock %}
                     </div>
+                {% elif empty_list %}
+                    {% block empty_list %}
+                        {% include 'high_school/broken.html' %}
+                    {% endblock %}
                 {% else %}
-                    {% block broken %}
+                    {% block unauth %}
                         {% include 'high_school/broken.html' %}
                     {% endblock %}
                 {% endif %}
@@ -45,15 +49,15 @@
     <script src="//cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
     <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-     <script>
-{#         for school list filter#}
-        $(".filter-btn").click(function(e){
+    <script>
+        {#         for school list filter#}
+        $(".filter-btn").click(function (e) {
             let high_school_div = $(".high-school-filter-div");
             let is_div_visible = high_school_div.hasClass("active");
-            if(!is_div_visible) {
+            if (!is_div_visible) {
                 high_school_div.addClass("active");
                 high_school_div.show()
-            }else {
+            } else {
                 high_school_div.removeClass("active");
                 high_school_div.hide()
             }
