sessions implemented in high school, test cases completed, dashboard default to all_schools

--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -40,7 +40,7 @@
                     {# this has to be a user object and not a user_type string  #}
                     <span class="nav-item nav-link p-2 active" id="nav-allSchools-tab"
                           data-toggle="tab"
-                          data-url="{% url 'dashboard:high_school:index' 'ut_student' %}"
+                          data-url="{% url 'dashboard:high_school:index'  %}"
                           role="tab" aria-controls="nav-allSchools">All Schools</span>
                     <span class="nav-item nav-link p-2" id="nav-selectedSchools-tab"
                           data-toggle="tab"
