--- a/high_school/templates/high_school/broken.html
+++ b/high_school/templates/high_school/broken.html
@@ -25,7 +25,7 @@
             Oops! We couldn't find your high school
         </p>
         <small class="pt-1">Contact oneapply_teamthree@gmail.com if the problem persists.</small>
-        <a href="{% url 'dashboard:high_school:index' 'ut_student' %}">
+        <a href="{% url 'dashboard:high_school:index'  %}">
             <button class="btn btn-lg btn-primary mt-4 mb-4">Home
             </button>
         </a>
