--- a/high_school/templates/high_school/save_high_schools.html
+++ b/high_school/templates/high_school/save_high_schools.html
@@ -1,7 +1,7 @@
 {% extends 'high_school/index.html' %}
 
 {% block save_highschool %}
-    <form action="{% url 'dashboard:high_school:save' 'ut_student' %}" method="POST">
+    <form action="{% url 'dashboard:high_school:save'  %}" method="POST">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="Save"/>
