fixed hs search, filter - page issue, added hs test cases

--- a/high_school/templates/high_school/broken.html
+++ b/high_school/templates/high_school/broken.html
@@ -22,7 +22,7 @@
                     </span>
         </div>
         <p class="mt-5" style="font-size: 18px;">
-            Oops! We couldn't find your high school
+            Oops! We couldn't find what you're looking for...
         </p>
         <small class="pt-1">Contact oneapply_teamthree@gmail.com if the problem persists.</small>
         <a href="{% url 'dashboard:high_school:index'  %}">
