--- a/high_school/templates/high_school/index.html
+++ b/high_school/templates/high_school/index.html
@@ -7,6 +7,7 @@
         <meta charset="UTF-8">
         <title>OneApply</title>
         {% load static %}
+        {% load hs_filters %}
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" type="text/css"
               href="{% static 'high_schools/css/high_school.css' %}">
