added test cases for save_hs form

--- a/high_school/templates/high_school/broken.html
+++ b/high_school/templates/high_school/broken.html
@@ -15,6 +15,7 @@
     {% endif %}
 {% endblock %}
 {% block empty_list %}
+    {% if empty_list %}
     <div class="no-school-placeholder">
         <div style="font-size: 18px;">
                     <span class="mb-3" style="font-size: 48px">
@@ -30,4 +31,5 @@
             </button>
         </a>
     </div>
+    {% endif %}
 {% endblock %}
