--- a/high_school/templates/high_school/index.html
+++ b/high_school/templates/high_school/index.html
@@ -190,6 +190,18 @@
                 return showPage(currentPage - 1);
             });
         });
+        {#to toggle fav high school for user#}
+        $(".school-fav-btn").click(function(e){
+            e.preventDefault();
+            let school_dbn = $(this).attr("dbn_value");
+            let is_fav = parseInt($(this).attr("is_fav"));
+            is_fav = is_fav===1?0:1;
+            $(this).attr("is_fav", is_fav);
+            let url = "{% url 'dashboard:high_school:toggle_fav' 'school_dbn' '0000' %}";
+            url = url.replace('school_dbn',school_dbn);
+            url = url.replace('0000', "" +is_fav);
+            window.location.href = url;
+        })
     </script>
     </html>
 
