--- a/high_school/templates/high_school/school_list.html
+++ b/high_school/templates/high_school/school_list.html
@@ -60,10 +60,23 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="high-school-fav-div {% if not request.GET.is_fav_on or request.GET.is_fav_on == "0" %} hide-fav {% endif %}">
+                            <span>These are your favorite schools...</span>
+                        </div>
                     </form>
                 </div>
                 <div class="high-school-filters">
                     <span class="filter-btn"><i class="fa fa-filter"></i></span>
+                    <form id="fav_form" name="fav_form" method="GET">
+                        <input name="is_fav_on" type="hidden"
+                                {% if not request.GET.is_fav_on or request.GET.is_fav_on == "0" %}
+                               value="1"
+                               {% else %}value="0"{% endif %}>
+                        <span class="fav-btn" onclick="fav_form.submit()"><i
+                                {% if request.GET.is_fav_on and request.GET.is_fav_on == "1" %}
+                                    class="fa fa-heart"{% else %}
+                                    class="fa fa-heart-o" {% endif %}></i></span>
+                    </form>
                 </div>
             </div>
             {% for school in high_schools %}
@@ -78,15 +91,25 @@
                 {% endwith %}
             <div class="d-flex w-100 justify-content-between mb-2">
                 <h4 class="mb-1" style="width: 75%">{{ school.school_name }}</h4>
+                <div>
+                <span class="school-fav-btn" dbn_value="{{ school.dbn }}"
+                        {% if school in fav_schools %}
+                      is_fav="1" {% else %} is_fav="0" {% endif %}
+                      style="font-size: 18px; padding: 4px;">
+                <i{% if school in fav_schools %} class="fa fa-heart"{% else %}
+                                                 class="fa fa-heart-o" {% endif %}></i></span>
+                </div>
+            </div>
+            {#TODO: change this to school.boro instead and map it to full name#}
+            <div class="d-flex w-100 justify-content-between mb-2">
+                <h5 class="mb-2">{{ school.neighborhood }}</h5>
                 <small class="pt-1"
-                       style="width: 25%; text-align: right; vertical-align: middle;">
-                                    <span style="font-size: 14px; padding: 4px;"><i
-                                            class="fa fa-clock-o"></i></span>
+                       style="width: 25%; text-align: right; vertical-align: middle;display: none;">
+                    <span style="font-size: 14px; padding: 4px;"><i
+                            class="fa fa-clock-o"></i></span>
                     {{ school.start_time }} - {{ school.end_time }}
                 </small>
             </div>
-            {#TODO: change this to school.boro instead and map it to full name#}
-            <h5 class="mb-2">{{ school.neighborhood }}</h5>
             <div class="d-flex w-100 justify-content-between">
                         <span style="font-size: 14px; padding: 4px;">
                             <i class="fa fa-graduation-cap mr-2"></i>
