all schools UI fix

--- a/high_school/templates/high_school/school_list.html
+++ b/high_school/templates/high_school/school_list.html
@@ -1,6 +1,6 @@
 {% block school_list %}
     {% load hs_filters %}
-    <div style="height: 90%; overflow-y: scroll; margin-bottom: 5%;">
+    <div style="height: 90%; margin-bottom: 5%;">
         <div class="list-group">
             <div style="display: flex; flex-direction: row; width: 100%;">
                 <div class="high-school-search">
