--- a/static/dashboard/dashboard.css
+++ b/static/dashboard/dashboard.css
@@ -4,6 +4,7 @@
   text-align: center;
   background-color: #f9f9f9;
   border-top: .05rem solid #e5e5e5;
+  display: none;
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
