--- a/static/high_schools/css/high_school.css
+++ b/static/high_schools/css/high_school.css
@@ -15,20 +15,18 @@ body {
 }
 
 .left-pane {
-    height: 100vh !important;
-    /*background-color: #95a5a6;*/
     background-color: whitesmoke;
-    /*overflow-y: scroll;*/
-    /*overflow-x: hidden;*/
+    border-right: 2px solid gray;
 }
 
-.pagination-div{
+.pagination-div {
     margin: 0 7.5%;
 }
 
 .right-pane {
     background-color: whitesmoke;
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .blur-bg {
@@ -40,22 +38,20 @@ body {
     margin-right: -15px;
 }
 
-.right-pane-container {
-    position: absolute;
-    top: 1%;
-<<<<<<< HEAD
-    margin: 2.5% 7.5%;
-=======
-    margin: 2% 7.5%;
->>>>>>> 6a6eaedfb4a396e6ade164a015c64ce2f6a9c7fa
-    width: 80%;
+.right-pane .top-header {
+    width: 100%;
+    min-height: auto;
 }
 
-.right-pane .top-header {
-    height: 40%;
-    max-height: 45%;
-    /*background: url("../../logIn/images/bg_1.jpg");*/
-    /*background-size: cover;*/
+.right-pane-container {
+    display: flex;
+    flex-direction: column;
+    margin: 5% 7.5%;
+}
+
+.right-pane .content-div {
+    max-height: 70%;
+    min-height: 50%;
 }
 
 .no-school-placeholder {
@@ -67,18 +63,18 @@ body {
     width: 100%;
 }
 
-.high-school-search{
+.high-school-search {
     margin: 2% 2.5% 0 7.5%;
     width: 75%;
 }
 
-.high-school-search .search-div{
+.high-school-search .search-div {
     display: flex !important;
     flex-direction: column !important;
     position: relative !important;
 }
 
-.high-school-search .search-div .search-input{
+.high-school-search .search-div .search-input {
     width: 100%;
     height: 36px;
     padding: 15px 20px;
@@ -87,12 +83,12 @@ body {
     border-radius: 12px;
 }
 
-.high-school-search .search-div .search-input:focus{
+.high-school-search .search-div .search-input:focus {
     outline: none !important;
     border: 2px solid slategray !important;
 }
 
-.high-school-search .search-div .search-btn{
+.high-school-search .search-div .search-btn {
     color: slategray;
     position: absolute;
     left: 95%;
@@ -100,19 +96,22 @@ body {
     cursor: pointer;
 }
 
-.high-school-filters{
+.high-school-filters {
     margin: 2% 5% 0 2.5%;
     padding: 2px 10px;
 }
-.high-school-filters .filter-btn{
+
+.high-school-filters .filter-btn {
     color: slategray;
     font-size: 20px;
     cursor: pointer;
 }
-.high-school-filter-div{
+
+.high-school-filter-div {
     display: none;
     margin: 2% 0 0 0;
 }
+
 /*overriding bootstrap*/
 .list-group-item {
     width: 85% !important;
