--- a/high_school/templates/high_school/school_list.html
+++ b/high_school/templates/high_school/school_list.html
@@ -68,8 +68,8 @@
             </div>
             {% for school in high_schools %}
                 {% with request.get_full_path as querystring %}
-                    {% if querystring|split_string:"?" %}
-                        <a href="{% url 'dashboard:high_school:overview'  school.dbn %}?{{ querystring|split_string:"?" }}"
+                    {% if querystring|split_string_single:"?" %}
+                        <a href="{% url 'dashboard:high_school:overview'  school.dbn %}?{{ querystring|split_string_single:"?" }}"
                            class="list-group-item list-group-item-action {% if selected_school and selected_school.dbn == school.dbn %}active{% endif %}">
                     {% else %}
                         <a href="{% url 'dashboard:high_school:overview'  school.dbn %}"
